@@ -1,3 +1,14 @@
+1999-04-27  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome-history.c (gnome_history_get_recently_used): Remove "rt"
+	and use "r" in fopen call.
+	(write_history): ditoo.
+	* gnome-fileconvert.c (load_types_from): ditto
+	* gnome-score.c (log_score): ditto
+	(gnome_score_get_notable): ditto.
+	* gnome-mime.c (mime_fill_from_file): Ditto.
+	* gnome-triggers.c (gnome_triggers_readfile): ditto.
+
 Sat Apr 24 14:04:31 1999  George Lebl  <jirka@5z.com>
 
 	* gnome-dentry.c: (gnome_desktop_entry_copy) copy the is_kde flag
